gen/Logo3dParser.py
# Generated from /Users/alejandro/LP/LP_python/Logo3d.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class Logo3dParser ( Parser ):

    grammarFileName = "Logo3d.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'IF'", "'THEN'", "'ELSE'", "'END'", "'WHILE'", 
                     "'DO'", "'FROM'", "'TO'", "'PROC'", "'IS'", "'FOR'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "':='", "'>>'", "'<<'", "'('", 
                     "')'", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'=='", 
                     "'!='", "'>='", "'<='", "'//'", "','", "'.'", "'\n'", 
                     "' '" ]

    symbolicNames = [ "<INVALID>", "IF", "THEN", "ELSE", "END", "WHILE", 
                      "DO", "FROM", "TO", "PROC", "IS", "FOR", "VALOR", 
                      "ENTER", "DECIMAL", "VARIABLE", "TEXT", "OPERADORLOGIC", 
                      "ASSIGNACIO", "LECTURA", "ESCRIPTURA", "PAR1", "PAR2", 
                      "SUMA", "RESTA", "MULT", "DIV", "MESGRAN", "MESPETIT", 
                      "IGUAL", "DIF", "MESGRANIGUAL", "MESPETITIGUAL", "COMENTARI", 
                      "COMA", "PUNT", "ENL", "WS", "LINE_COMMENT" ]

    RULE_root = 0
    RULE_sentencia = 1
    RULE_bloque = 2
    RULE_bucle = 3
    RULE_sentencia_simple = 4
    RULE_assignacio = 5
    RULE_ifcond = 6
    RULE_whileloop = 7
    RULE_forloop = 8
    RULE_lectura = 9
    RULE_escriptura = 10
    RULE_declaraciof = 11
    RULE_invocaciof = 12
    RULE_funcio = 13
    RULE_expresio = 14
    RULE_condicio = 15

    ruleNames =  [ "root", "sentencia", "bloque", "bucle", "sentencia_simple", 
                   "assignacio", "ifcond", "whileloop", "forloop", "lectura", 
                   "escriptura", "declaraciof", "invocaciof", "funcio", 
                   "expresio", "condicio" ]

    EOF = Token.EOF
    IF=1
    THEN=2
    ELSE=3
    END=4
    WHILE=5
    DO=6
    FROM=7
    TO=8
    PROC=9
    IS=10
    FOR=11
    VALOR=12
    ENTER=13
    DECIMAL=14
    VARIABLE=15
    TEXT=16
    OPERADORLOGIC=17
    ASSIGNACIO=18
    LECTURA=19
    ESCRIPTURA=20
    PAR1=21
    PAR2=22
    SUMA=23
    RESTA=24
    MULT=25
    DIV=26
    MESGRAN=27
    MESPETIT=28
    IGUAL=29
    DIF=30
    MESGRANIGUAL=31
    MESPETITIGUAL=32
    COMENTARI=33
    COMA=34
    PUNT=35
    ENL=36
    WS=37
    LINE_COMMENT=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(Logo3dParser.EOF, 0)

        def declaraciof(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Logo3dParser.DeclaraciofContext)
            else:
                return self.getTypedRuleContext(Logo3dParser.DeclaraciofContext,i)


        def getRuleIndex(self):
            return Logo3dParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = Logo3dParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.declaraciof()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==Logo3dParser.PROC):
                    break

            self.state = 37
            self.match(Logo3dParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentencia_simple(self):
            return self.getTypedRuleContext(Logo3dParser.Sentencia_simpleContext,0)


        def bloque(self):
            return self.getTypedRuleContext(Logo3dParser.BloqueContext,0)


        def getRuleIndex(self):
            return Logo3dParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = Logo3dParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 41
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Logo3dParser.VARIABLE, Logo3dParser.LECTURA, Logo3dParser.ESCRIPTURA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.sentencia_simple()
                pass
            elif token in [Logo3dParser.IF, Logo3dParser.WHILE, Logo3dParser.FOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.bloque()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifcond(self):
            return self.getTypedRuleContext(Logo3dParser.IfcondContext,0)


        def bucle(self):
            return self.getTypedRuleContext(Logo3dParser.BucleContext,0)


        def getRuleIndex(self):
            return Logo3dParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = Logo3dParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bloque)
        try:
            self.state = 45
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Logo3dParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.ifcond()
                pass
            elif token in [Logo3dParser.WHILE, Logo3dParser.FOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.bucle()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BucleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def whileloop(self):
            return self.getTypedRuleContext(Logo3dParser.WhileloopContext,0)


        def forloop(self):
            return self.getTypedRuleContext(Logo3dParser.ForloopContext,0)


        def getRuleIndex(self):
            return Logo3dParser.RULE_bucle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBucle" ):
                listener.enterBucle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBucle" ):
                listener.exitBucle(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBucle" ):
                return visitor.visitBucle(self)
            else:
                return visitor.visitChildren(self)




    def bucle(self):

        localctx = Logo3dParser.BucleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bucle)
        try:
            self.state = 49
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Logo3dParser.WHILE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.whileloop()
                pass
            elif token in [Logo3dParser.FOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.forloop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sentencia_simpleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lectura(self):
            return self.getTypedRuleContext(Logo3dParser.LecturaContext,0)


        def escriptura(self):
            return self.getTypedRuleContext(Logo3dParser.EscripturaContext,0)


        def assignacio(self):
            return self.getTypedRuleContext(Logo3dParser.AssignacioContext,0)


        def invocaciof(self):
            return self.getTypedRuleContext(Logo3dParser.InvocaciofContext,0)


        def getRuleIndex(self):
            return Logo3dParser.RULE_sentencia_simple

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia_simple" ):
                listener.enterSentencia_simple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia_simple" ):
                listener.exitSentencia_simple(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia_simple" ):
                return visitor.visitSentencia_simple(self)
            else:
                return visitor.visitChildren(self)




    def sentencia_simple(self):

        localctx = Logo3dParser.Sentencia_simpleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sentencia_simple)
        try:
            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.lectura()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.escriptura()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 53
                self.assignacio()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 54
                self.invocaciof()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignacioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(Logo3dParser.VARIABLE, 0)

        def ASSIGNACIO(self):
            return self.getToken(Logo3dParser.ASSIGNACIO, 0)

        def expresio(self):
            return self.getTypedRuleContext(Logo3dParser.ExpresioContext,0)


        def getRuleIndex(self):
            return Logo3dParser.RULE_assignacio

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignacio" ):
                listener.enterAssignacio(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignacio" ):
                listener.exitAssignacio(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignacio" ):
                return visitor.visitAssignacio(self)
            else:
                return visitor.visitChildren(self)




    def assignacio(self):

        localctx = Logo3dParser.AssignacioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignacio)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(Logo3dParser.VARIABLE)
            self.state = 58
            self.match(Logo3dParser.ASSIGNACIO)
            self.state = 59
            self.expresio(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfcondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(Logo3dParser.IF, 0)

        def condicio(self):
            return self.getTypedRuleContext(Logo3dParser.CondicioContext,0)


        def THEN(self):
            return self.getToken(Logo3dParser.THEN, 0)

        def END(self):
            return self.getToken(Logo3dParser.END, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Logo3dParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(Logo3dParser.SentenciaContext,i)


        def ELSE(self):
            return self.getToken(Logo3dParser.ELSE, 0)

        def getRuleIndex(self):
            return Logo3dParser.RULE_ifcond

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfcond" ):
                listener.enterIfcond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfcond" ):
                listener.exitIfcond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfcond" ):
                return visitor.visitIfcond(self)
            else:
                return visitor.visitChildren(self)




    def ifcond(self):

        localctx = Logo3dParser.IfcondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifcond)
        self._la = 0 # Token type
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.match(Logo3dParser.IF)
                self.state = 62
                self.condicio()
                self.state = 63
                self.match(Logo3dParser.THEN)
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 64
                    self.sentencia()
                    self.state = 67 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Logo3dParser.IF) | (1 << Logo3dParser.WHILE) | (1 << Logo3dParser.FOR) | (1 << Logo3dParser.VARIABLE) | (1 << Logo3dParser.LECTURA) | (1 << Logo3dParser.ESCRIPTURA))) != 0)):
                        break

                self.state = 69
                self.match(Logo3dParser.END)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(Logo3dParser.IF)
                self.state = 72
                self.condicio()
                self.state = 73
                self.match(Logo3dParser.THEN)
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 74
                    self.sentencia()
                    self.state = 77 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Logo3dParser.IF) | (1 << Logo3dParser.WHILE) | (1 << Logo3dParser.FOR) | (1 << Logo3dParser.VARIABLE) | (1 << Logo3dParser.LECTURA) | (1 << Logo3dParser.ESCRIPTURA))) != 0)):
                        break

                self.state = 79
                self.match(Logo3dParser.ELSE)
                self.state = 81 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 80
                    self.sentencia()
                    self.state = 83 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Logo3dParser.IF) | (1 << Logo3dParser.WHILE) | (1 << Logo3dParser.FOR) | (1 << Logo3dParser.VARIABLE) | (1 << Logo3dParser.LECTURA) | (1 << Logo3dParser.ESCRIPTURA))) != 0)):
                        break

                self.state = 85
                self.match(Logo3dParser.END)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileloopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(Logo3dParser.WHILE, 0)

        def condicio(self):
            return self.getTypedRuleContext(Logo3dParser.CondicioContext,0)


        def DO(self):
            return self.getToken(Logo3dParser.DO, 0)

        def END(self):
            return self.getToken(Logo3dParser.END, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Logo3dParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(Logo3dParser.SentenciaContext,i)


        def getRuleIndex(self):
            return Logo3dParser.RULE_whileloop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileloop" ):
                listener.enterWhileloop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileloop" ):
                listener.exitWhileloop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileloop" ):
                return visitor.visitWhileloop(self)
            else:
                return visitor.visitChildren(self)




    def whileloop(self):

        localctx = Logo3dParser.WhileloopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whileloop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(Logo3dParser.WHILE)
            self.state = 90
            self.condicio()
            self.state = 91
            self.match(Logo3dParser.DO)
            self.state = 93 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 92
                self.sentencia()
                self.state = 95 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Logo3dParser.IF) | (1 << Logo3dParser.WHILE) | (1 << Logo3dParser.FOR) | (1 << Logo3dParser.VARIABLE) | (1 << Logo3dParser.LECTURA) | (1 << Logo3dParser.ESCRIPTURA))) != 0)):
                    break

            self.state = 97
            self.match(Logo3dParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForloopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(Logo3dParser.FOR, 0)

        def VARIABLE(self):
            return self.getToken(Logo3dParser.VARIABLE, 0)

        def FROM(self):
            return self.getToken(Logo3dParser.FROM, 0)

        def expresio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Logo3dParser.ExpresioContext)
            else:
                return self.getTypedRuleContext(Logo3dParser.ExpresioContext,i)


        def TO(self):
            return self.getToken(Logo3dParser.TO, 0)

        def DO(self):
            return self.getToken(Logo3dParser.DO, 0)

        def END(self):
            return self.getToken(Logo3dParser.END, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Logo3dParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(Logo3dParser.SentenciaContext,i)


        def getRuleIndex(self):
            return Logo3dParser.RULE_forloop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForloop" ):
                listener.enterForloop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForloop" ):
                listener.exitForloop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForloop" ):
                return visitor.visitForloop(self)
            else:
                return visitor.visitChildren(self)




    def forloop(self):

        localctx = Logo3dParser.ForloopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_forloop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(Logo3dParser.FOR)
            self.state = 100
            self.match(Logo3dParser.VARIABLE)
            self.state = 101
            self.match(Logo3dParser.FROM)
            self.state = 102
            self.expresio(0)
            self.state = 103
            self.match(Logo3dParser.TO)
            self.state = 104
            self.expresio(0)
            self.state = 105
            self.match(Logo3dParser.DO)
            self.state = 107 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 106
                self.sentencia()
                self.state = 109 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Logo3dParser.IF) | (1 << Logo3dParser.WHILE) | (1 << Logo3dParser.FOR) | (1 << Logo3dParser.VARIABLE) | (1 << Logo3dParser.LECTURA) | (1 << Logo3dParser.ESCRIPTURA))) != 0)):
                    break

            self.state = 111
            self.match(Logo3dParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LecturaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LECTURA(self, i:int=None):
            if i is None:
                return self.getTokens(Logo3dParser.LECTURA)
            else:
                return self.getToken(Logo3dParser.LECTURA, i)

        def expresio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Logo3dParser.ExpresioContext)
            else:
                return self.getTypedRuleContext(Logo3dParser.ExpresioContext,i)


        def getRuleIndex(self):
            return Logo3dParser.RULE_lectura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLectura" ):
                listener.enterLectura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLectura" ):
                listener.exitLectura(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLectura" ):
                return visitor.visitLectura(self)
            else:
                return visitor.visitChildren(self)




    def lectura(self):

        localctx = Logo3dParser.LecturaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_lectura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 113
                    self.match(Logo3dParser.LECTURA)
                    self.state = 114
                    self.expresio(0)

                else:
                    raise NoViableAltException(self)
                self.state = 117 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscripturaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESCRIPTURA(self, i:int=None):
            if i is None:
                return self.getTokens(Logo3dParser.ESCRIPTURA)
            else:
                return self.getToken(Logo3dParser.ESCRIPTURA, i)

        def expresio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Logo3dParser.ExpresioContext)
            else:
                return self.getTypedRuleContext(Logo3dParser.ExpresioContext,i)


        def getRuleIndex(self):
            return Logo3dParser.RULE_escriptura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscriptura" ):
                listener.enterEscriptura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscriptura" ):
                listener.exitEscriptura(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEscriptura" ):
                return visitor.visitEscriptura(self)
            else:
                return visitor.visitChildren(self)




    def escriptura(self):

        localctx = Logo3dParser.EscripturaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_escriptura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 119
                    self.match(Logo3dParser.ESCRIPTURA)
                    self.state = 120
                    self.expresio(0)

                else:
                    raise NoViableAltException(self)
                self.state = 123 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaraciofContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROC(self):
            return self.getToken(Logo3dParser.PROC, 0)

        def funcio(self):
            return self.getTypedRuleContext(Logo3dParser.FuncioContext,0)


        def IS(self):
            return self.getToken(Logo3dParser.IS, 0)

        def END(self):
            return self.getToken(Logo3dParser.END, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Logo3dParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(Logo3dParser.SentenciaContext,i)


        def getRuleIndex(self):
            return Logo3dParser.RULE_declaraciof

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaraciof" ):
                listener.enterDeclaraciof(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaraciof" ):
                listener.exitDeclaraciof(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaraciof" ):
                return visitor.visitDeclaraciof(self)
            else:
                return visitor.visitChildren(self)




    def declaraciof(self):

        localctx = Logo3dParser.DeclaraciofContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_declaraciof)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(Logo3dParser.PROC)
            self.state = 126
            self.funcio()
            self.state = 127
            self.match(Logo3dParser.IS)
            self.state = 129 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 128
                self.sentencia()
                self.state = 131 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Logo3dParser.IF) | (1 << Logo3dParser.WHILE) | (1 << Logo3dParser.FOR) | (1 << Logo3dParser.VARIABLE) | (1 << Logo3dParser.LECTURA) | (1 << Logo3dParser.ESCRIPTURA))) != 0)):
                    break

            self.state = 133
            self.match(Logo3dParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InvocaciofContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcio(self):
            return self.getTypedRuleContext(Logo3dParser.FuncioContext,0)


        def getRuleIndex(self):
            return Logo3dParser.RULE_invocaciof

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInvocaciof" ):
                listener.enterInvocaciof(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInvocaciof" ):
                listener.exitInvocaciof(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvocaciof" ):
                return visitor.visitInvocaciof(self)
            else:
                return visitor.visitChildren(self)




    def invocaciof(self):
